--- a/index.html
+++ b/index.html
@@ -6,6 +6,34 @@
     <title>JBP GIS and Web Solutions</title>
 </head>
 <body>
-    
+
+    <div class="header">
+
+    </div>
+
+    <div class="content">
+        <div class="overview">
+
+        </div>
+
+
+        <div class="information">
+
+        </div>
+        
+
+        <div class="testimonial">
+
+        </div>
+
+
+        <div class="action">
+
+        </div>
+    </div>
+
+    <div class="footer">
+
+    </div>
 </body>
 </html>
