Add header and footer Added the header and footer content and styled them.

--- a/index.html
+++ b/index.html
@@ -4,16 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JBP GIS and Web Solutions</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
     <div class="header">
+        <img class="logo" width = 150px src="./images/logo.png">
+        <h1>JBP GIS and Web Solutions</h1>
+        <ul class="links">
+            <li><a href="#">About</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Services</a></li>
+        </ul>
 
     </div>
 
     <div class="content">
         <div class="overview">
-
+            <div class="overview-content">
+                <h2 class="overview-header">About JBP</h2>
+                <p class="overview-paragraph">JBP GIS and Web Solutions is here for all of your GIS and web needs, from simple website creation
+                    to complex, interactive GIS web applications. 
+                </p>
+                <button class="portfolio-button">View Portfolio</button>
+            </div>
+            <img class="overview-image" width=300px src="./images/">
         </div>
 
 
@@ -33,6 +48,8 @@
     </div>
 
     <div class="footer">
+        <p class="footer-text"> Created 2025 by JBP GIS and Web Solutions</p>
+        <p class="footer-text">Contact us at j.batistapaquin@jbp.solutions.com</p>
 
     </div>
 </body>
