Style overview content Styled the overview content part of the body

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </p>
                 <button class="portfolio-button">View Portfolio</button>
             </div>
-            <img class="overview-image" width=300px src="./images/">
+            <img class="overview-image" width=300px src="./images/jarred-hs.jpg">
         </div>
 
 
