--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="header">
-        <img class="logo" width = 150px src="./images/logo.png">
+        <img class="logo" width = 150px src="./images/logo.svg">
         <h1>JBP GIS and Web Solutions</h1>
         <ul class="links">
             <li><a href="#">About</a></li>
